# mental_health_demo

./: .gitmodules  README.md  pyproject.toml
mental_health_demo/: README.md  __init__.py  __main__.py  flask_app.py
mental_health_demo/static/styles/: style.css
mental_health_demo/templates/: index.html
pywebview-react-boilerplate/: package-lock.json
